# CMakeList.txt : CMake project for ApproximatePI, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("ApproximatePI")

# Add source to this project's executable.
add_executable (ApproximatePI "ApproximatePI.cpp" "ApproximatePI.h")

# TODO: Add tests and install targets if needed.
